# portfolio

./: .gitignore  .htaccess  README.md  about.html  apps.html  chart35.html  contact-submit.php  contact.html  eta-platform.html  index.html  jacob-stephens-portfolio.md  portfolio.html  theme.css  theme.js
blog/: index.html  newsletter-confirm.php  newsletter-lib.php  newsletter-subscribe.php  newsletter-unsubscribe.php  newsletter-widget.js  send-newsletter.php
blog/a-privacy-first-fertility-chart-encrypted-on-your-device/: index.html
blog/boring-deploy-script/: index.html
blog/byte-counts-lie-measuring-what-i-actually-wrote/: index.html
blog/chart35/: index.html
blog/eta-platform/: index.html
blog/hmac-signed-webhooks/: index.html
blog/hmac-signed-webhooks-one-primitive-three-dialects/: index.html
blog/human-in-the-loop-ai-agents/: index.html
blog/human-in-the-loop-ai-agents-for-legacy-business-systems/: index.html
blog/importing-live-dns-into-terraform/: index.html
blog/importing-live-dns-into-terraform-without-downtime/: index.html
blog/letting-an-ai-agent-modernize-a-frozen-legacy-site/: index.html
blog/letting-an-ai-agent-modernize-a-frozen-legacy-site-safely/: index.html
blog/manifest-performance-tuning/: index.html
blog/measuring-real-authorship/: index.html
blog/the-animation-is-a-replay/rust-kernel/: Cargo.toml
blog/the-animation-is-a-replay/rust-kernel/src/: lib.rs
connect/: index.html  jacob-stephens.vcf
decisions/: index.html
hi/: index.html
notes/: index.html
private/: capture_screenshots.js
scan/: index.html
(+65 files in other folders)
